# ontext

./: .gitignore  AGENT_RULES.md  ARCHITECTURE.md  CLAUDE.md  CONTRACTS.md  Cargo.toml  DECISIONS.md  PIPELINE.md  PROJECT.md  START_HERE.md
app/ontext/: package-lock.json  package.json  pnpm-lock.yaml
app/ontext-wails/: app.go  go.mod  go.sum  main.go  wails.json
app/ontext/src-tauri/: Cargo.toml  tauri.conf.json
app/ontext/src-tauri/src/: lib.rs  main.rs
app/web/: .env.example  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/: PRODUCTION_TEST_CHECKLIST.md
docs/adrs/: 001-cpal-audio-capture.md  001-use-cpal.md  002-use-webrtc-vad.md  003-use-whisper.md  004-use-arboard-enigo.md  004-use-rdev.md  005-cpal-audio-capture.md  006-use-arboard-enigo.md  (+7 more)
gate-outs/: stage-01-hotkey.md  stage-02-audio.md  stage-03-vad.md  stage-04-transcribe.md  stage-05-clipboard.md  stage-06-focus-paste.md  stage-07-audio-go.md  stage-08-vad-go.md  stage-09-transcribe-go.md  stage-10-clipboard-go.md  stage-11-frontend-bindings.md  stage-12-focus-paste-cutover.md  stage-13-hotkey-go.md  stage-14-e2e-speech-test.md  stage-15-hotkey-streaming-ui.md  stage-16-macos-permissions.md  stage-17-noise-vad-accuracy.md  stage-M0-wails-bootstrap.md
modules/transcribe/: Cargo.toml
modules/transcribe/src/: lib.rs
tasks/: 2026-06-12-plan.md  stage-01-hotkey.md  stage-02-audio.md  stage-03-vad.md  stage-04-transcribe.md  stage-05-clipboard.md  stage-06-focus-paste.md  stage-07-audio-go.md  stage-08-vad-go.md  stage-09-transcribe-go.md  stage-10-clipboard-go.md  stage-11-frontend-bindings.md  stage-12-focus-paste-cutover.md  stage-13-hotkey-go.md  stage-14-e2e-speech-test.md  stage-15-hotkey-streaming-ui.md  stage-16-macos-permissions.md  stage-17-noise-vad-accuracy.md  stage-18-ai-autocorrect.md  stage-19-rnnoise-denoise.md  stage-M0-wails-bootstrap.md
(+92 files in other folders)
