[package]
name = "ontext-transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ontext-vad = { path = "../vad" }
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
hound = "3"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["full"] }
